--- a/app/src/main/res/layout/item_app.xml
+++ b/app/src/main/res/layout/item_app.xml
@@ -15,7 +15,7 @@
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nom App"
+        android:text="@string/nom_app"
         android:textStyle="bold"
         android:textSize="14sp"/>
 
