--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,14 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/nav_apps"
+    <item
+        android:id="@+id/nav_accueil"
         android:icon="@drawable/ic_apps"
-        android:title="Mes Apps"/>
-    <item android:id="@+id/nav_categories"
+        android:title="Accueil" />
+
+    <item
+        android:id="@+id/nav_categories"
         android:icon="@drawable/ic_categories"
-        android:title="Catégories"/>
-    <item android:id="@+id/nav_panier"
+        android:title="Catégories" />
+    <item
+        android:id="@+id/nav_achat"
         android:icon="@drawable/ic_panier"
-        android:title="Panier"/>
-    <item android:id="@+id/nav_recherche"
+        android:title="Profil" />
+
+    <item
+        android:id="@+id/nav_recherche"
         android:icon="@drawable/ic_search"
-        android:title="Recherche"/>
+        android:title="Recherche" />
 </menu>
