--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bienvenue dans Appla TN - Téléchargez vos apps en dinars !"
+            android:text="@string/bienvenue_dans_appla_tn_t_l_chargez_vos_apps_en_dinars"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:layout_marginTop="8dp" />
@@ -58,9 +58,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"
-        android:layout_below="@id/header">
+        android:layout_below="@id/header"
+        android:contentDescription="Contenu de l'accueil, faites défiler pour voir les sections disponibles">
 
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
